fixes overflowing image in news detail

--- a/src/App.scss
+++ b/src/App.scss
@@ -819,6 +819,7 @@ input[type='checkbox'].dmcheck {
       margin: 0 auto;
       display: inline-block;
       clear:both;
+      width:100%;
     }
     img.article-image{
       width:100%;
